<resources>
    <string name="app_name">Ballin on a Budget</string>
    <string name="menu_add_budget">Add Budget</string>
    <string name="menu_add_item">Add Item</string>
    <string name="menu_open_pie_chart">Open Pie Chart</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="title_activity_add_budget">AddBudgetActivity</string>
    <string name="title_activity_add_items">AddItemsActivity</string>

    <!-- Activity Add Items values-->
    <string name="activity_add_items_name">Purchase Name:</string>
    <string name="activity_add_items_amount">Amount:</string>
    <string name="activity_add_items_hyperlink">Link (optional):</string>
    <string name="budget_form_name">Name</string>
    <string name="budget_form_max_amount">Limit</string>
    <string name="budget_form_current">Current</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>
    <string name="ItemsKey">Item</string>
    <string name="activity_add_items_date">Date</string>
    <string name="month">Month</string>
    <string name="Home">Go Home</string>
    <string name="YearlyBudget">View Yearly Budget</string>
    <string name="update_button">Update</string>
    <string name="budget_form_balance">Balance</string>
    <string name="recurring">Recurring Item</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="barchart_description">Yearly Budget View</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


</resources>
