<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Activities.AddBudgetActivity" >

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_form_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/nameInputBudget"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text" tools:targetApi="o">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/maxAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_form_max_amount"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/maxAmountInput"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            tools:targetApi="o">

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelBudget"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addBudget"
                android:text="@string/add_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>